<resources>
    <string name="app_name">RentalManagementForLandlords</string>
    <string name="title_home">Home</string>
    <string name="title_accounting">Accounting</string>
    <string name="title_listings">Listings</string>
    <string name="title_collaboration">Users</string>
    <string name="title_analytics">Analytics</string>
    <string name="hello">Hello,</string>
    <string name="what_would_you_like_to_view">What would you like to view?</string>
    <string name="maintenance_repair"><![CDATA[Maintenance & Repair]]></string>
    <string name="automated_rent_accounting"><![CDATA[Automated Rent & Accounting]]></string>
    <string name="listing_tenant_onboarding"><![CDATA[Listing & Tenant Onboarding]]></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="go_to_create_account">Go to create account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="about_you">About you</string>
    <string name="login_details">Login details</string>
    <string name="please_enter_data_for_the_most_recently_completed_tax_year">Please enter data for the most recently completed tax year</string>
    <string name="section_1_summary_of_financial_accounts">Section 1: Summary of Financial Accounts</string>
    <string name="continueText">Continue</string>
    <string name="what_was_your_revenue_across_all_properties">What was your revenue across all properties?</string>
    <string name="what_were_your_total_expenses">What were your total expenses?</string>
    <string name="what_is_your_assessed_income_tax_as_a_percentage">What is your assessed income tax as a percentage?</string>
    <string name="how_many_properties_did_you_own">How many properties did you own?</string>
    <string name="section_2_summary_of_expenses">Section 2: Summary of Expenses</string>
    <string name="please_enter_the_most_recent_data_available_for_the_current_year">Please enter the most recent data available for the current year</string>
    <string name="ytd">YTD</string>
    <string name="this_quarter">This quarter</string>
    <string name="this_month">This month</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="enter_your_expenses_for_the_time_period_specified">Enter your expenses for the time period specified</string>
    <string name="how_many_bathrooms_does_it_have">How many bathrooms does it have?</string>
    <string name="how_many_bedrooms_does_it_have">How many bedrooms does it have?</string>
    <string name="enter_address">Enter address</string>
    <string name="what_is_the_address_of_your_first_property">What is the address of your first property?</string>
    <string name="complete_account">Complete account</string>
    <string name="create_account">Create Account</string>

    <string-array name="arraySpinner">
        <item>"Administrator"</item>
        <item>"Editor"</item>
        <item>"Viewer"</item>
    </string-array>

    <string-array name="arraySpinnerChange">
        <item>"Administrator"</item>
        <item>"Editor"</item>
        <item>"Viewer"</item>
        <item>"Remove"</item>
    </string-array>
</resources>