<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/majorTask1"
        android:name="com.example.rentalmanagementforlandlords.ui.majorTask1.task1"
        android:label="@string/automated_rent_accounting"
        tools:layout="@layout/task_1" >
        <action
            android:id="@+id/action_majorTask1_to_majorTask2"
            app:destination="@id/majorTask2" />
    </fragment>

    <fragment
        android:id="@+id/majorTask2"
        android:name="com.example.rentalmanagementforlandlords.ui.majorTask2.task2"
        android:label="@string/title_accounting"
        tools:layout="@layout/task_2" />

    <fragment
        android:id="@+id/majorTask3"
        android:name="com.example.rentalmanagementforlandlords.ui.majorTask3.task3"
        android:label="@string/listing_tenant_onboarding"
        tools:layout="@layout/task_3" />

    <fragment
        android:id="@+id/majorTask4"
        android:name="com.example.rentalmanagementforlandlords.ui.majorTask4.task4"
        android:label="@string/title_analytics"
        tools:layout="@layout/task_4" />

    <fragment
        android:id="@+id/majorTask5"
        android:name="com.example.rentalmanagementforlandlords.ui.majorTask5.task5"
        android:label="@string/title_collaboration"
        tools:layout="@layout/task_5" />
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.rentalmanagementforlandlords.ui.MainFragment"
        android:label=""
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_mainFragment_to_majorTask1"
            app:destination="@id/majorTask1" />
        <action
            android:id="@+id/action_mainFragment_to_majorTask2"
            app:destination="@id/majorTask2" />
        <action
            android:id="@+id/action_mainFragment_to_majorTask3"
            app:destination="@id/majorTask3" />
        <action
            android:id="@+id/action_mainFragment_to_majorTask4"
            app:destination="@id/majorTask4" />
        <action
            android:id="@+id/action_mainFragment_to_majorTask5"
            app:destination="@id/majorTask5" />
    </fragment>
</navigation>